scrollbar fix, external links

--- a/static/screen.css
+++ b/static/screen.css
@@ -26,11 +26,11 @@ a:hover {
     background: white;
 }
 #about {
-    position: fixed;
     top: 10%;
     text-align: center;
 }
     #about .row-fluid {
+        margin-top: 40px;
         margin-bottom: 80px;
     }
     #about h1, h2, li {
